--- a/PAW_FP_05/Exercicio1.1/views/pages/homepage.ejs
+++ b/PAW_FP_05/Exercicio1.1/views/pages/homepage.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
         <input type="radio" name="notread" id="notread"> Not Read
         <br><br>
 
-        <button type="submit">Submit</button>
+        <button type="submit" id="button">Submit</button>
     </form>
 </body>
 
