--- a/PAW_FP_05/Exercicio1/views/pages/homepage.ejs
+++ b/PAW_FP_05/Exercicio1/views/pages/homepage.ejs
@@ -26,8 +26,8 @@
         <input id="description" name="description" type="text" placeholder="Description">
         <br><br>
 
-        <input type="radio" name="read" id="read"> Read
-        <input type="radio" name="notread" id="notread"> Not Read
+        <input type="radio" name="read" id="read" value="Yes"> Read
+        <input type="radio" name="read" id="read" value="No"> Not Read
         <br><br>
 
         <button type="submit" id="button">Submit</button>
