--- a/PAW_FP_05/Exercicio1/views/pages/homepage.ejs
+++ b/PAW_FP_05/Exercicio1/views/pages/homepage.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Document</title>
+    <title>Submissão de Reviews de Livros</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
