Exercise 2 with an unknown error (JSON is not defined)

--- a/PAW_FP_05/Exercicio1/views/partials/emailBook.ejs
+++ b/PAW_FP_05/Exercicio1/views/partials/emailBook.ejs
@@ -6,7 +6,7 @@
                 <%= item.name %>
             </h4>
 
-            <a href="/review/<%= item.email %>/<%= item.book %>">Link</a>
+            <a href="/review/<%= item.email %>/<%= item.book %>"> link </a>
         </div>
         <% }) %>
 </div>
